--- a/index.html
+++ b/index.html
@@ -49,83 +49,53 @@
 
   <!----------------------------------------------------------->
   <div class="container">
-   <div class="feature-news">
-  <div class="row">
-    <div class="col-md-12">
+    <section class="section-white">
+      <div class="container">
 
+        <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+          <!-- Indicators -->
+          <ol class="carousel-indicators">
+            <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+            <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+          </ol>
 
-          <div id="myCarousel" class="carousel slide" data-ride="carousel">
-
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner">
-
-              <div class="item active">
-                <img src="https://www.fillmurray.com/760/400">
-                 <div class="carousel-caption">
-                  <h4><a href="#">Lorem ipsum dolor sit amet consetetur sadipscing</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-              </div><!-- End Item -->
-
-               <div class="item">
-                <img src="https://www.fillmurray.com/760/400">
-                 <div class="carousel-caption">
-                  <h4><a href="#">consetetur sadipscing elitr, sed diam nonumy eirmod</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-              </div><!-- End Item -->
-
-              <div class="item">
-                <img src="https://www.fillmurray.com/760/400">
-                 <div class="carousel-caption">
-                  <h4><a href="#">tempor invidunt ut labore et dolore</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-              </div><!-- End Item -->
-
-              <div class="item">
-                <img src="https://www.fillmurray.com/760/400">
-                 <div class="carousel-caption">
-                  <h4><a href="#">magna aliquyam erat, sed diam voluptua</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-              </div><!-- End Item -->
-
-              <div class="item">
-                <img src="https://www.fillmurray.com/760/400">
-                 <div class="carousel-caption">
-                  <h4><a href="#">tempor invidunt ut labore et dolore magna aliquyam erat</a></h4>
-                  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.</p>
-                </div>
-              </div><!-- End Item -->
-
-            </div><!-- End Carousel Inner -->
-
-
-          <ul class="list-group col-sm-4">
-            <li data-target="#myCarousel" data-slide-to="0" class="list-group-item active"><h4>Lorem ipsum dolor sit amet consetetur sadipscing</h4></li>
-            <li data-target="#myCarousel" data-slide-to="1" class="list-group-item"><h4>consetetur sadipscing elitr, sed diam nonumy eirmod</h4></li>
-            <li data-target="#myCarousel" data-slide-to="2" class="list-group-item"><h4>tempor invidunt ut labore et dolore</h4></li>
-            <li data-target="#myCarousel" data-slide-to="3" class="list-group-item"><h4>magna aliquyam erat, sed diam voluptua</h4></li>
-            <li data-target="#myCarousel" data-slide-to="4" class="list-group-item"><h4>tempor invidunt ut labore et dolore magna aliquyam erat</h4></li>
-          </ul>
-
-            <!-- Controls -->
-            <div class="carousel-controls">
-                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
-                  <span class="glyphicon glyphicon-chevron-left"></span>
-                </a>
-                <a class="right carousel-control" href="#myCarousel" data-slide="next">
-                  <span class="glyphicon glyphicon-chevron-right"></span>
-                </a>
+          <!-- Wrapper for slides -->
+          <div class="carousel-inner">
+            <div class="item active">
+              <img src="./images/JAY-Z Roc party.jpg" alt="...">
+              <div class="carousel-caption">
+                <a href="./pages/index-6.html"><h2>JAY-Z Talks Donald Trump, #MeToo, Marriage, More on “The Van Jones Show”: Watch</h2></a>
+              </div>
             </div>
+            <div class="item">
+              <img src="./images/Lorde.jpg" alt="...">
+              <div class="carousel-caption">
+                <a href="./pages/index-5.html"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+                <p>Click here to read the article.</p>
+              </div>
+            </div>
+            <div class="item">
+              <img src="./images/012618-music-migos-culture-2-drake-feature.jpg" alt="...">
+              <div class="carousel-caption">
+                <a href="./pages/index-5.html"><h2>Does Culture 2 live up to its predecessor album?</h2></a>
 
-          </div><!-- End Carousel -->
+                <p>Check our latest review here.</p>
+              </div>
+            </div>
+          </div>
 
-    </div>
+          <!-- Controls -->
+          <a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+          </a>
+          <a class="right carousel-control" href="#carousel-example-generic" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+          </a>
+        </div>
 
-  </div>
-</div>
+      </div>
+    </section>
         <div class="row">
           <div class="col-md-12">
 
@@ -140,20 +110,18 @@
        <div class="row align-items-center">
          <h1>News</h1>
          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-           <h1>Article</h1>
-           <img src="https://www.fillmurray.com/200/200" class="img-responsive float-left"alt="">
-           <h2>Tupac returns..</h2>
+
+           <img src="./images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+           <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
 
-
-
-
          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-           <h1>Article</h1>
-           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-           <h2>Tupac returns..</h2>
+
+           <img src="./images/Lorde copy.jpg" class="img-responsive"alt="">
+           <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
@@ -161,18 +129,20 @@
          </div>
 
          <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-           <h1>Article</h1>
-           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-           <h2>Tupac returns..</h2>
+
+           <img src="./images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+           <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
          </div>
 
          <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-           <h1>Article</h1>
-           <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-           <h2>Tupac returns..</h2>
+
+           <img src="./images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
+
+           <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
          </div>
@@ -181,41 +151,44 @@
          </div>
 
          <div class="row align-items-center">
-           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-             <h1>Article</h1>
-             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-             <h2>Tupac returns..</h2>
+           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
+
+             <img src="./images/Sturgill Simpson, Chris Stapleton.png" class="img-responsive float-left"alt="">
+
+             <a href="#"><h2>Sturgill Simpson Joins Chris Stapleton on “SNL”</h2></a>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+           </div>
+
+           <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
+
+             <img src="./images/Lorde copy.jpg" class="img-responsive"alt="">
+             <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
 
 
            </div>
 
-
-
            <div class="col-xs-12 col-md-6 col-lg-3  thumbnail">
-             <h1>Article</h1>
-            <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-            <h2>Tupac returns..</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+
+             <img src="./images/SNL Aziz Ansari.JPG" class="img-responsive"alt="">
+
+             <a href="#"><h2>Grammys 2018: Lorde Reportedly Won’t Perform</h2></a>
+             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
 
            </div>
 
            <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-             <h1>Article</h1>
-             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-             <h2>Tupac returns..</h2>
-             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
+             <img src="./images/donald_trump_jay_z.jpg" class="img-responsive"alt="">
 
-           </div>
-           <div class="col-xs-12 col-md-6 col-lg-3 thumbnail">
-             <h1>Article</h1>
-             <img src="https://www.fillmurray.com/200/200" class="img-responsive"alt="">
-             <h2>Tupac returns..</h2>
+             <a href="#"><h2>Donald Trump Is Mad at JAY-Z.</h2></a>
              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
 
            </div>
+
 
 
            </div>
@@ -234,8 +207,9 @@
 <div class="row">
   <h1>Videos</h1>
   <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
+    <a href="#"><h2>Kali Uchis - After The Storm</h2></a>
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
+    <img src="./images/Screen Shot 2018-01-28 at 20.01.19.png" alt="">
     <p>Checkout the latest music video collaboration by Kali Uchis, Tyer the Creator and Bootsy Collins</p>
 
     </video>
@@ -244,7 +218,9 @@
 
   <div class="col-xs-12 col-sm-6 col-md-6 thumbnail">
 
-    <img src="https://www.fillmurray.com/740/400" alt="">
+    <a href="#"><h2>Sigrid - Strangers</h2></a>
+
+    <img src="./images/Screen Shot 2018-01-28 at 20.02.16.png" alt="">
     <p>Sigrid proves shes worthy for success with latest performance on Graham Norton</p>
 
     </video>
